media/css/pathmapper-tool.css
/* ... */
/* Large devices (desktops, 992px and up) */
@media (min-width: 992px) {
    .widget-pane {
        top: 0;
        width: 32rem;
        height: 100%;
        box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
    }
    .widget-pane-toggle {
        left: 100%;
        width: auto;
        background-color: transparent;
    }
    #btn-pane-toggle {
        display: inline-block;
        flex-direction: row;
        width: 2.5rem;
        height: 3.25rem;
        padding: 0;
        margin: 0;
        line-height: 1;
        font-size: 1.25rem;
        color: #666;
        background-color: #f8f5f4;
        border: 0;
        border-left: 1px solid #ddd;
        border-radius: 0 0.25rem 0.25rem 0;
        /* offset-x | offset-y | blur-radius | color */
        box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.3);
    }
    .txt-pane-toggle {
        display: none !important;
    }
    .widget-pane-expanded {
        -webkit-transform: translateX(0em);
        transform: translateX(0rem);
    }
    .widget-pane-collapsed {
        -webkit-transform: translateX(-32rem);
        transform: translateX(-32rem);
    }
    .widget-pane-toggle .fas {
        margin: 0 !important;
    }
    .btn-timeline {
        display: inline-block;
        margin: 2rem 2rem 0 0;
        float: right;
        height: calc(1.5em + .75rem + 2px);
        border-radius: calc(1.5em + .75rem + 2px);
        font-weight: 500;
        color: #97421b;
        background-color: #f8f5f4;
        border-color: #97421b;
    }
    .btn-timeline:before {
        font-family: "Font Awesome 5 Free";
        font-weight: 900;
        content: "\f1da";
        margin-right: 0.5rem;
    }
    .btn-timeline:hover {
        color: #82320d;
        background-color: #efefef;
        /* offset-x | offset-y | blur-radius | color */
        box-shadow: 0 2px 1px -1px rgba(0,0,0,0.2), 0 1px 1px 0 rgba(0,0,0,0.141), 0 1px 3px 0 rgba(0,0,0,0.122);
    }
    #widget-timeline {
        display: block;
        position: absolute;
        bottom: 1.5rem;
        right: 4rem;
        border-radius: 0;
        margin: 0;
        padding: 1rem;
        background-color: #fff;
        height: 8.8rem;
        width: calc(100% - 37rem);
        box-shadow: 0 1px 4px -1px rgba(0, 0, 0, 0.3);
    }
    .timeline-expanded {
        display: block !important;
    }
    .timeline-collapsed {
        display: none !important;
    }
    .btn-play-timeline {
        width: 3rem;
        height: 3rem;
        background: #97421b;
        border: 1px solid transparent;
        border-radius: 100%;
        padding: 0;
        cursor: pointer;
    }
    .btn-play-timeline:focus {
        outline: 0;
        border: 1px solid #3399ff;
        box-shadow: 0 0 3px 3px rgba(51, 153, 255, 0.5);
        /* offset-x | offset-y | blur-radius | spread-radius | color */
    }
    .btn-play-timeline:hover {
        background-color: #82320d;
        /* offset-x | offset-y | blur-radius | color*/ 
        box-shadow: 0 2px 1px -1px rgba(0,0,0,0.2), 0 1px 1px 0 rgba(0,0,0,0.141), 0 1px 3px 0 rgba(0,0,0,0.122);
    }
    .btn-play-timeline::before {
        content: '';
        display: block;
        box-sizing: border-box;
        width: 1.6rem;
        height: 1.6rem;
        border-style: solid;
        border-width: 0.8rem 0 0.8rem 1.6rem;
        border-color: transparent transparent transparent #fff;
        transition: 10ms all linear;
        position: relative;
        top: 0;
        left: 0.75rem;
    }
    .btn-play-timeline.pause::before {
        border-style: double;
        border-width: 0 0 0 1rem;
        border-color: #fff;
        left: 0.925rem;
    }
    .layer-actions {
        width: 31.5rem;
    }
    .widget-timeline-close {
        position: absolute;
        top: 0;
        right: 0;
        height: 2.5rem;
        width: 2.5rem;
        margin: 0;
        padding: 0;
        font-weight: 500;
        font-size: 1.125rem;
        line-height: 1;
        color: #666;
        background-color: transparent;
        border: 0;
        border-radius: 0;
        box-shadow: none;
        z-index: 1000;
    }
    .widget-timeline-close:focus,
    .widget-timeline-close:active {
        border: 0;
        outline: 0.125rem solid #39f;
        color: #39f;
        border: 0;
        box-shadow: none;
    }
}

/* Extra large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) {
}

